--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 <div class="offer-container">
         <a href="#" target="_blank">
-            <img id="img" src="assa.png" alt="UNBELIEVABLE OFFER" class="offer-image"> <!-- Added id="img" -->
+            <img id="img" src="https://i.imghippo.com/files/uBe1016xJA.png" alt="UNBELIEVABLE OFFER" class="offer-image"> <!-- Added id="img" -->
         </a>
     </div>
     
