--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:url" content="https://gpn449.github.io/Gp-offer/">
        
     <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, " />
     
     <style>
         * {
