--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="*শুধু মাত্র গ্ৰামীণ সিম ইউজারদের জন্য! বিশেষ ছাড়ে ফ্রি গিফট পেতে এখানে ক্লিক করুন।'5GB' ">
 <meta property="og:title" content="গ্ৰামীণ সিম ইউজারদের জন্য বিশেষ অফার ! এখুনি জিতে নিন">
 <meta property="og:description" content="শুধু মাত্র গ্ৰামীণ সিম ইউজারদের জন্য! বিশেষ ছাড়ে ফ্রি গিফট পেতে এখানে ক্লিক করুন।">
-<meta property="og:image" content="assa.png">
+<meta property="og:image" content="https://i.imghippo.com/files/LEI2812UA.png">
 <meta property="og:url" content="https://gpn449.github.io/Gp-offer/">
        
     <meta charset="UTF-8">
