--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 	
 
 
-<meta property="og:title" content="গ্ৰামীণ সিম ইউজারদের জন্য বিশেষ অফার ! এখুনি জিতে নিন">
-<meta property="og:description" content="শুধু মাত্র গ্ৰামীণ সিম ইউজারদের জন্য! বিশেষ ছাড়ে ফ্রি গিফট পেতে এখানে ক্লিক করুন।">
-<meta property="og:image" content="https://i.imghippo.com/files/LEI2812UA.png">
-<meta property="og:url" content="https://gpn449.github.io/Gp-offer/">
-       <title>গ্ৰামীণ সিম দিয়ে ফ্রী অফার জিতে নিন </title>    
-    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, " />
-    
+
+	  <meta property="og:title" content="আপনি ৳ ২০০ টাকা // 3GB MB ফ্রি তে নিতে পারবেন!">
+      <meta property="og:description" content="বিকাশ নাম্বার ব্যবহার করে ৳  ২০০ টাকা জিতে নিন! এবং 3 GB MB জিতে নিন!">
+      <meta property="og:image" content="https://i.imghippo.com/files/VmrL4199ba.png">
+      <meta property="og:url" content="https://Bkash-246.vercel.app">
+
+	
+	
+	
+	
+  <meta charset="UTF-8">
+  <title>এখুনি ৳200 টাকা জিতে নিন?</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         * {
             margin: 0;
