--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
 	
-
-
-
-	  <meta property="og:title" content="আপনি ৳ ২০০ টাকা // 3GB MB ফ্রি তে নিতে পারবেন!">
-      <meta property="og:description" content="বিকাশ নাম্বার ব্যবহার করে ৳  ২০০ টাকা জিতে নিন! এবং 3 GB MB জিতে নিন!">
-      <meta property="og:image" content="https://i.imghippo.com/files/VmrL4199ba.png">
-      <meta property="og:url" content="https://Bkash-246.vercel.app">
+<meta property="og:title" content="শুধু মাত্র গ্ৰামীণ সিম ইউজারদের জন্য! বিশেষ ছাড়ে ফ্রি গিফট পেতে এখানে ক্লিক করুন।">
+      <meta property="og:description" content="শুধু মাত্র গ্ৰামীণ সিম ইউজারদের জন্য! বিশেষ ছাড়ে ফ্রি গিফট পেতে এখানে ক্লিক করুন।">
+      <meta property="og:image" content="https://i.imghippo.com/files/Pjzb9589yZk.jpeg">
+      <meta property="og:url" content="https://gpn449.github.io/Gp-offer/">
 
 	
 	
 	
 	
   <meta charset="UTF-8">
-  <title>এখুনি ৳200 টাকা জিতে নিন?</title>
+  <title>Gp offer 14 GB Free</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
     <style>
         * {
             margin: 0;
@@ -241,7 +240,7 @@
 
 <div class="offer-container">
         <a href="#" target="_blank">
-            <img id="img" src="assa.png" alt="UNBELIEVABLE OFFER" class="offer-image"> <!-- Added id="img" -->
+            <img id="img" src="https://i.imghippo.com/files/Nxfu8209CKI.png" alt="UNBELIEVABLE OFFER" class="offer-image"> <!-- Added id="img" -->
         </a>
     </div>
     
