--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 <meta property="og:title" content="শুধু মাত্র গ্ৰামীণ সিম ইউজারদের জন্য! বিশেষ ছাড়ে ফ্রি গিফট পেতে এখানে ক্লিক করুন।">
       <meta property="og:description" content="শুধু মাত্র গ্ৰামীণ সিম ইউজারদের জন্য! বিশেষ ছাড়ে ফ্রি গিফট পেতে এখানে ক্লিক করুন।">
-      <meta property="og:image" content="https://i.imghippo.com/files/spS2844eP.jpg">
+      <meta property="og:image" content="https://i.imghippo.com/files/TG4393e.png">
       <meta property="og:url" content="https://gpn449.github.io/Gp-offer/">
 
 	
